include cart sidebar in _base

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -142,7 +142,13 @@
 
     {% block content %}
 
+
     {% endblock %}
+
+
+    {% include 'cart/cart_sidebar.html' %}
+
+
         <!-- ************************* JS Files ************************* -->
 
         <!-- jQuery JS -->
