--- a/templates/_base.html
+++ b/templates/_base.html
@@ -57,7 +57,7 @@
                                     <ul class="mainmenu d-lg-flex jusity-content-end jusity-content-lg-start pt-4">
                                         <li class="mainmenu__item menu-item-has-children active">
                                             <a href="{% url 'product_list' %}" class="mainmenu__link">
-                                                <span class="mm-text">خانه</span>
+                                                <span class="mm-text">فروشگاه</span>
                                             </a>
                                         </li>
                                         <li class="mainmenu__item menu-item-has-children">
