--- a/pages/templates/pages/aboutus.html
+++ b/pages/templates/pages/aboutus.html
@@ -1,5 +1,5 @@
 {% extends '_base.html'%}
 {% block title %}About US{% endblock %}
 {% block content %}
-    <h1>About US Page</h1>
+    {% include 'top_header.html' with header_name='About US Page' %}
 {% endblock %}
