Update for show product image

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -44,9 +44,11 @@
                                                 <div class="ShoppingYar-product">
                                                     <div class="product-inner">
                                                         <figure class="product-image">
-                                                            <a href="{{ product.get_absolute_url }}">
-                                                                <img src="https://dkstatics-public.digikala.com/digikala-products/15d774761e234a15c1c559ac540963baad9e229f_1631704695.jpg?x-oss-process=image/resize,m_lfit,h_800,w_800/quality,q_90"
+                                                            {% if product.image %}
+                                                                <a href="{{ product.get_absolute_url }}">
+                                                                <img src="{{ product.image.url }}"
                                                                      alt="Products">
+                                                            {% endif %}
                                                             </a>
                                                             <div class="ShoppingYar-product-action">
                                                                 <div class="product-action d-flex">
@@ -112,7 +114,7 @@
                                 </ul>
                             </div>
                             <div class="footer-widget">
-                                Codingyar.com © | all rights reserved
+                                all rights reserved
                             </div>
                         </div>
                     </div>
