--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -45,7 +45,7 @@
                                             </div>
                                             <button type="submit"
                                                     class="btn btn-small btn-bg-red btn-color-white btn-hover-2">
-                                                {% trans 'Add to Cart' %}
+                                                {% trans 'Add To Cart' %}
                                             </button>
                                         </div>
                                     </form>
