Update i18n for product detail

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -52,10 +52,9 @@
                                 </div>
                                 <div class="product-footer-meta mt-5 pt-5">
                                     <p><span class="m-0">{% trans 'Categories' %}:</span>
-                                        <a href="shop.html">لباس</a>,
-                                        <a href="shop.html">تابستانی</a>,
-                                        <a href="shop.html">گرم</a>,
-                                        <a href="shop.html">زنانه</a>
+                                        <a href="shop.html">{% trans 'Dress' %}</a>,
+                                        <a href="shop.html">{% trans 'Autumnal' %}</a>,
+                                        <a href="shop.html">{% trans 'Female' %}</a>,
                                     </p>
                                 </div>
                             </div>
@@ -71,11 +70,13 @@
                                     </a>
                                     <a class="m-0 product-data-tab__link nav-link" id="nav-info-tab" data-toggle="tab"
                                        href="#nav-info" role="tab" aria-selected="true">
-                                        <span>ویژگی ها</span>
+                                        <span>{% trans 'Attributes' %}</span>
                                     </a>
                                     <a class="m-0 product-data-tab__link nav-link" id="nav-reviews-tab"
                                        data-toggle="tab" href="#nav-reviews" role="tab" aria-selected="true">
-                                        <span>نظرات ({{ product.comments.all|only_active_comments|length }})</span>
+                                        <span>{% trans 'Comments' %}
+                                            ({{ product.comments.all|only_active_comments|length }})
+                                        </span>
                                     </a>
                                 </div>
                                 <div class="tab-content product-data-tab__content" id="product-tabContent">
@@ -91,20 +92,17 @@
                                             <table class="table shop_attributes">
                                                 <tbody>
                                                 <tr>
-                                                    <th>وزن</th>
-                                                    <td>۴۳۰ گرم</td>
+                                                    <th>{% trans 'Weight' %}</th>
+                                                    <td>{% trans 'Gram' %} </td>
                                                 </tr>
                                                 <tr>
-                                                    <th>سایز</th>
-                                                    <td>XL</td>
+                                                    <th>{% trans 'Size' %}</th>
+                                                    <td></td>
                                                 </tr>
                                                 <tr>
-                                                    <th>رنگ</th>
+                                                    <th>{% trans 'Colors' %}</th>
                                                     <td>
-                                                        <a href="shop-sidebar.html">مشکی</a>,
-                                                        <a href="shop-sidebar.html">سبز</a>,
-                                                        <a href="shop-sidebar.html">قرمز</a>,
-                                                        <a href="shop-sidebar.html">نارنجی</a>,
+                                                        <a href="shop-sidebar.html">{% trans 'Block' %}</a>,
                                                     </td>
                                                 </tr>
                                                 </tbody>
@@ -115,7 +113,7 @@
                                          aria-labelledby="nav-reviews-tab">
                                         <div class="product-reviews">
                                             <h3 class="review__title">{{ product.comments.all|only_active_comments|length }}
-                                                نظر برای <b>{{ product.title }}</b></h3>
+                                                {% trans 'comment for' %} <b>{{ product.title }}</b></h3>
                                             <ul class="review__list">
                                                 {% for comment in product.comments.all|only_active_comments %}
                                                     <li class="review__item">
@@ -165,7 +163,9 @@
                                                         {% else %}
                                                             <p>
                                                                 {% trans 'To write your comment please' %}
-                                                                <a href="{% url 'account_login' %}"><b>{% trans 'Login' %}</b></a>
+                                                                <a href="{% url 'account_login' %}">
+                                                                    <b>{% trans 'Login' %}</b>
+                                                                </a>
                                                             </p>
                                                         {% endif %}
                                                     </div>
@@ -194,14 +194,18 @@
                                 </div>
                             </div>
                             <div class="footer-widget mb--50 pb--1">
-                                <ul class="footer-menu">
-                                    <li><a href="">درباره ما</a></li>
-                                    <li><a href="">قوانین و مقررات</a></li>
-                                    <li><a href="">تماس با ما</a></li>
+                                <ul class="product-footer-meta footer-menu">
+                                    <li>
+                                        <a href="{% url 'aboutus' %}">{% trans 'About Us' %}</a>
+                                    </li>
+                                    <span> | </span>
+                                    <li>
+                                        <a href="">{% trans 'Terms and Conditions' %}</a>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="footer-widget">
-                                all rights reserved
+                                {% trans 'All rights reserved' %}
                             </div>
                         </div>
                     </div>
@@ -214,12 +218,13 @@
         <div class="searchform__popup" id="searchForm">
             <a href="#" class="btn-close"><i class="flaticon flaticon-cross"></i></a>
             <div class="searchform__body">
-                <p>Start typing and press Enter to search</p>
+                <p>{% trans 'Start typing and press Enter to search' %}</p>
                 <form class="searchform">
                     <input type="text" name="popup-search" id="popup-search" class="searchform__input"
-                           placeholder="Search Entire Store...">
-                    <button type="submit" class="searchform__submit"><i
-                            class="flaticon flaticon-magnifying-glass-icon"></i></button>
+                           placeholder="{% trans 'Search Entire Store...' %}">
+                    <button type="submit" class="searchform__submit">
+                        <i class="flaticon flaticon-magnifying-glass-icon"></i>
+                    </button>
                 </form>
             </div>
         </div>
@@ -229,158 +234,6 @@
         <div class="ShoppingYar-global-overlay"></div>
         <!-- Global Overlay End -->
 
-        <!-- Qicuk View Modal Start -->
-        <div class="modal fade product-modal" id="productModal" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true"><i class="flaticon flaticon-cross"></i></span>
-                        </button>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="ShoppingYar-element-carousel nav-vertical-center"
-                                     data-slick-options='{
-                            "slidesToShow": 1,
-                            "slidesToScroll": 1,
-                            "arrows": true,
-                            "prevArrow": {"buttonClass": "slick-btn slick-prev", "iconClass": "fa fa-angle-double-left" },
-                            "nextArrow": {"buttonClass": "slick-btn slick-next", "iconClass": "fa fa-angle-double-right" }
-                        }'
-                                >
-                                    <div class="product-image">
-                                        <div class="product-image--holder">
-                                            <a href="product-details.html">
-                                                <img src="assets/img/products/prod-9-1.jpg" alt="Product Image"
-                                                     class="primary-image">
-                                            </a>
-                                        </div>
-                                        <span class="product-badge sale">sale</span>
-                                    </div>
-                                    <div class="product-image">
-                                        <div class="product-image--holder">
-                                            <a href="product-details.html">
-                                                <img src="assets/img/products/prod-9-1.jpg" alt="Product Image"
-                                                     class="primary-image">
-                                            </a>
-                                        </div>
-                                        <span class="product-badge sale">sale</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="modal-box product-summary">
-                                    <div class="product-navigation text-right mb--20">
-                                        <a href="#" class="prev"><i class="fa fa-angle-double-left"></i></a>
-                                        <a href="#" class="next"><i class="fa fa-angle-double-right"></i></a>
-                                    </div>
-                                    <div class="product-rating d-flex mb--20">
-                                        <div class="star-rating star-three">
-                                            <span>Rated <strong class="rating">5.00</strong> out of 5</span>
-                                        </div>
-                                    </div>
-                                    <h3 class="product-title mb--20">لباس تابستانی</h3>
-                                    <p class="product-short-description mb--25">Donec accumsan auctor iaculis. Sed
-                                        suscipit arcu ligula, at egestas magna molestie a. Proin ac ex maximus, ultrices
-                                        justo eget, sodales orci. Aliquam egestas libero ac turpis pharetra, in vehicula
-                                        lacus scelerisque. Vestibulum ut sem laoreet, feugiat tellus at, hendrerit
-                                        arcu.</p>
-                                    <div class="product-price-wrapper mb--25">
-                                        <span class="money">$200.00</span>
-                                        <span class="price-separator">-</span>
-                                        <span class="money">$400.00</span>
-                                    </div>
-                                    <form action="#" class="variation-form mb--30">
-                                        <div class="product-color-variations d-flex align-items-center mb--20">
-                                            <p class="variation-label">Color:</p>
-                                            <div class="product-color-variation variation-wrapper">
-                                                <div class="variation">
-                                                    <a class="product-color-variation-btn red selected"
-                                                       data-toggle="tooltip" data-placement="top" title="Red">
-                                                        <span class="product-color-variation-label">Red</span>
-                                                    </a>
-                                                </div>
-                                                <div class="variation">
-                                                    <a class="product-color-variation-btn black" data-toggle="tooltip"
-                                                       data-placement="top" title="Black">
-                                                        <span class="product-color-variation-label">Black</span>
-                                                    </a>
-                                                </div>
-                                                <div class="variation">
-                                                    <a class="product-color-variation-btn pink" data-toggle="tooltip"
-                                                       data-placement="top" title="Pink">
-                                                        <span class="product-color-variation-label">Pink</span>
-                                                    </a>
-                                                </div>
-                                                <div class="variation">
-                                                    <a class="product-color-variation-btn blue" data-toggle="tooltip"
-                                                       data-placement="top" title="Blue">
-                                                        <span class="product-color-variation-label">Blue</span>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="product-size-variations d-flex align-items-center mb--15">
-                                            <p class="variation-label">Size:</p>
-                                            <div class="product-size-variation variation-wrapper">
-                                                <div class="variation">
-                                                    <a class="product-size-variation-btn selected" data-toggle="tooltip"
-                                                       data-placement="top" title="S">
-                                                        <span class="product-size-variation-label">S</span>
-                                                    </a>
-                                                </div>
-                                                <div class="variation">
-                                                    <a class="product-size-variation-btn" data-toggle="tooltip"
-                                                       data-placement="top" title="M">
-                                                        <span class="product-size-variation-label">M</span>
-                                                    </a>
-                                                </div>
-                                                <div class="variation">
-                                                    <a class="product-size-variation-btn" data-toggle="tooltip"
-                                                       data-placement="top" title="L">
-                                                        <span class="product-size-variation-label">L</span>
-                                                    </a>
-                                                </div>
-                                                <div class="variation">
-                                                    <a class="product-size-variation-btn" data-toggle="tooltip"
-                                                       data-placement="top" title="XL">
-                                                        <span class="product-size-variation-label">XL</span>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a href="" class="reset_variations">Clear</a>
-                                    </form>
-                                    <div class="product-action d-flex flex-sm-row flex-column align-items-sm-center align-items-start mb--30">
-                                        <div class="quantity-wrapper d-flex align-items-center mr--30 mr-xs--0 mb-xs--30">
-                                            <label class="quantity-label" for="quick-qty">Quantity:</label>
-                                            <div class="quantity">
-                                                <input type="number" class="quantity-input" name="qty" id="quick-qty"
-                                                       value="1" min="1">
-                                            </div>
-                                        </div>
-                                        <button type="button"
-                                                class="btn btn-small btn-bg-red btn-color-white btn-hover-2"
-                                                onclick="window.location.href='cart.html'">
-                                            Add To Cart
-                                        </button>
-                                    </div>
-                                    <div class="product-footer-meta">
-                                        <p><span>Category:</span>
-                                            <a href="shop.html">Full Sweater</a>,
-                                            <a href="shop.html">SweatShirt</a>,
-                                            <a href="shop.html">Jacket</a>,
-                                            <a href="shop.html">Blazer</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Qicuk View Modal End -->
     </div>
     <!-- Main Wrapper End -->
 
